# cuda-image-toolbox

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ImageToolbox  KmeansWORK!.txt  Makefile  README.md  cmake_install.cmake  filter.h  filter_old.h  gaussianWORK!.txt  kernel.cu  main.cu  median_filtering.txt  sharpen.cu  sobel_filter.cu  test.cpp
.metadata/.plugins/org.eclipse.core.resources/.projects/RemoteSystemsTempFiles/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.hs-macbook-pro_9348/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.hs-macbook-pro_9348/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.hs-macbook-pro_9348/H.local_16/: node.properties
.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml  workingsets.xml
Documentation/Codes/Preprocessing/: Laplacian_Sharpen.txt  Sharpening.txt  median_Filter.txt
STAJ Dokümantasyon/Codes/Clustering/: kmeans.txt
STAJ Dokümantasyon/Codes/Preprocessing/: gaussianCode.txt  median2.txt  wienerCode.txt
STAJ Dokümantasyon/Documentation/: cuda.txt
Staj Defteri/: Form-d1.doc  Form-d3-1.doc  Form-d3-2.doc  Form-d4-1.doc  Form-d4-2.doc  Form-d4-3.doc  Form-d4-4.doc  Form-d4-5.doc  Form-d4-6.doc  Form-d4-7.doc  Form-d4-8.doc  ~$rm-d3-1.doc  ~$rm-d3-2.doc  ~$rm-d4-4.doc
(+1 files in other folders)
